RESULTS/AutoSpec/raw_results/out-4o-oopsla-mx/out/12_0003/12_merged.txt
/home/dimpling/AutoSpec/out/12_0003/12_merged.c:40:3: error: unterminated comment
   40 |   /* Infill for the first while loop */;
      |   ^
